@@ -1898,6 +1898,103 @@ sub _postfix
 }
 
 
+###########################################################
+# RTF Driver
+
+package Grutatxt::rtf;
+
+@ISA = ("Grutatxt");
+
+=head2 RTF Driver
+
+The additional parameters for a new Grutatxt object are:
+
+=over 4
+
+=item I<normal-size>
+
+The point size of normal text. By default is 10.
+
+=item I<heading-sizes>
+
+This argument must be a reference to an array containing
+the size in points of the 3 different heading levels. By
+default, level sizes are [ 20, 18, 15 ].
+
+=back
+
+=cut
+
+sub new
+{
+	my ($class, %args) = @_;
+	my ($gh);
+
+	bless(\%args, $class);
+	$gh = \%args;
+
+	$gh->{'-process-urls'} = 0;
+
+	$gh->{'heading-sizes'} ||= [ 34, 30, 28 ];
+	$gh->{'normal-size'} ||= 20;
+
+	return $gh;
+}
+
+
+sub _prefix
+{
+	my $gh = shift;
+
+	$gh->_push('{\rtf1\ansi {\plain \fs' . $gh->{'normal-size'} . ' ');
+}
+
+
+sub _empty_line
+{
+	my $gh = shift;
+
+	return '\par ';
+}
+
+
+sub _heading
+{
+	my ($gh, $level, $l) = @_;
+
+	return ' \par {\b \fs' . $gh->{'heading-sizes'}->[$level] . ' ' . $l . '}\par ';
+}
+
+
+sub _strong
+{
+	my ($gh, $str) = @_;
+	return "{\\b $str}";
+}
+
+
+sub _em
+{
+	my ($gh, $str) = @_;
+	return "{\\i $str}";
+}
+
+
+sub _code
+{
+	my ($gh, $str) = @_;
+	return "{\\tt $str}";
+}
+
+
+sub _postfix
+{
+	my $gh = shift;
+
+	$gh->_push('}}');
+}
+
+
 =head1 AUTHOR
 
 Angel Ortega angel@triptico.com
