@@ -4,7 +4,8 @@ Grutatxt Release Notes
 2.0.16
 ------
 
-  * New table of contents generation, triggered by the
+ * New RTF driver.
+ * New table of contents generation, triggered by the
    `--toc' command line argument or by adding a special
    mark inside the text.
 
